# quic_server_client

./: .gitattributes  .gitignore  Cargo.toml  LONG_README.md  README.md  cert.pem  key.pem  logging_config.yaml  logging_config_client.yaml  logging_config_server.yaml  output.txt
quic_actor/: Cargo.toml
quic_actor/src/: main.rs  udpactor.rs
udp_client/: Cargo.toml
udp_client/src/: main.rs
