[package]
name = "udp-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio= {version = "*", features=["net", "macros", "rt-multi-thread", "time"]}
quiche={git="https://github.com/cloudflare/quiche.git"}
ring= "*"
log= "*"
env_logger= "*"